--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Sharezza</title>
+<h1>Where tu share ta pizz'</h1>
+<p>Eh oui, la pizz ca se share </p>
   </head>
   <body>
   
