--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Sharezza</title>
 <h1>Where tu share ta pizz'</h1>
 <p>Eh oui, la pizz ca se share </p>
+
+<h2>Quand la ligne de commande fais la belle</h2>
   </head>
   <body>
   
